🚧 wip on other pages

--- a/v1/resume/index.liquid
+++ b/v1/resume/index.liquid
@@ -2,7 +2,7 @@
 layout: pageTemplate.liquid
 filename: resume
 title: Resume
-plaqueKey: v1-resume
+plaqueKey: v1_resume
 ---
 
 <!-- TITLE SECTION -->
@@ -16,12 +16,12 @@ plaqueKey: v1-resume
 <div class="section dark" id="preface">
   <div class="content">
     <p class="text-small">
-      Welcome to my resume page! To navigate, click any header to see the 
+      Welcome to my resume page! To navigate, click any header to see the  
       information inside. There is also a summarized, printable,
       <a
         class="emphasis"
         href="./Leander Rodrigues - Resume.pdf"
-        target="_blank">PDF version available here</a>. If you have any questions, comments or just like what you see, be sure 
+        target="_blank">PDF version available here</a>. If you have any questions, comments or just like what you see, be sure  
       to let me know through
       <a class="emphasis" href="../#home">my contact form</a>.
     </p>
@@ -98,7 +98,7 @@ plaqueKey: v1-resume
           <li>
             Committed, self-taught
             <b>full-stack developer</b>
-            with an 
+            with an  
             unconventional, but foundational
             <b>engineering background</b>
           </li>
@@ -107,7 +107,7 @@ plaqueKey: v1-resume
             in industry</li>
           <li>
             Inquisitve and
-            <b>perpetual student</b>, focusing free-time towards 
+            <b>perpetual student</b>, focusing free-time towards  
             fully-functional, impressive
             <b>side-projects</b>
           </li>
@@ -115,11 +115,11 @@ plaqueKey: v1-resume
             <b>French</b>, both written and oral</li>
           <li>Extensive charity work experience with all ages and abilities</li>
           <li>
-            I'm completely willing to learn new something specific that I'm 
+            I'm completely willing to learn new something specific that I'm  
             missing, to become a better candidate. If there's something you wish
             I knew,
             <a href="../#contact" class="emphasis">send me a message</a>
-            and 
+            and  
             I'll start reading!
           </li>
         </ul>
@@ -139,18 +139,18 @@ plaqueKey: v1-resume
       <div class="resume-item">
         <div class="item-desc">
           <p class="indent">
-            I'm an engineering student, making an effort to break into the 
+            I'm an engineering student, making an effort to break into the  
             programming world.
-            <b>My drive to learn new, difficult technologies, motivates me to 
+            <b>My drive to learn new, difficult technologies, motivates me to  
               ask questions, take on more projects, and challenge myself to try
               things often outside of my comfort zone.</b>
-            So far, this dedication has given me a functional site, and many 
+            So far, this dedication has given me a functional site, and many  
             proud projects/achievements to share with you, but regardless, the
             future is brighter.
           </p>
           <br/>
           <p class="major">
-            Given the opportunity to work with your company, I intend to prove 
+            Given the opportunity to work with your company, I intend to prove  
             myself by way of results, enthusiasm and hard work.
           </p>
         </div>
@@ -177,7 +177,7 @@ plaqueKey: v1-resume
         </div>
         <div class="item-date emphasis">Sep 2016 - Present</div>
         <div class="item-desc indent">
-          Currently a candidate for a B.A.Sc. Honors Nanotechnology Engineering 
+          Currently a candidate for a B.A.Sc. Honors Nanotechnology Engineering  
           at the University of Waterloo. My program gives me the opportunity to
           work with/study the latest and greatest in tech, research and science,
           while learning the fundamentals of engineering.
@@ -195,7 +195,7 @@ plaqueKey: v1-resume
           </div>
           <div class="item-date emphasis">Jan 2018 - Mar 2018</div>
           <div class="item-desc indent">
-            During my free time of my second coop term, I decided that I wanted 
+            During my free time of my second coop term, I decided that I wanted  
             to get back into the programming world, and searched for some good
             courses/resources online. About 2.5 months later, I'd completed a
             series of projects/challengs in this intensive course covering the
@@ -210,7 +210,7 @@ plaqueKey: v1-resume
           </div>
           <div class="item-date emphasis">Ongoing</div>
           <div class="item-desc indent">
-            A deep-dive project-driven React development course taught by Wes 
+            A deep-dive project-driven React development course taught by Wes  
             Bos. It covers everything from ES6, to Webpack, and even Firebase
             Authentication. Without dependecies on any React Libraries the
             course culminates in a full-blown real-time application focusing on
@@ -225,7 +225,7 @@ plaqueKey: v1-resume
           </div>
           <div class="item-date emphasis">Ongoing</div>
           <div class="item-desc indent">
-            This course explores the professional, modern use cases for Node.js, 
+            This course explores the professional, modern use cases for Node.js,  
             specifically, using Express.js and MongoDB. In the curriculum, a
             full-blown real-world application is developed with search,
             geolocation, review and curation capabalities!
@@ -239,7 +239,7 @@ plaqueKey: v1-resume
           </div>
           <div class="item-date emphasis">Aug 2018 - Present</div>
           <div class="item-desc indent">
-            A 30 day JavaScript challenge course which focuses on making the 
+            A 30 day JavaScript challenge course which focuses on making the  
             most of your pure JS. The code for each challenge does not depend on
             libraries, frameworks, compilers or boiler plates, just you and your
             JavaScript abilities. it's a self-paced course but I'm currently
@@ -248,8 +248,7 @@ plaqueKey: v1-resume
           </div>
         </div>
         <!-- FCC Data Viz
-            <div class="resume-item flex-item">      <h2>Data Visualization Certification</h2>
-              <div class="item-location"><a href="https://www.freecodecamp.org" target="_blank">FreeCodeCamp.org</a></div>
+            <div class="resume-item flex-item">      <h2>Data Visualization Certification</h2>      <div class="item-location"><a href="https://www.freecodecamp.org" target="_blank">FreeCodeCamp.org</a></div>
               <div class="item-date emphasis">May 2018 - Present</div>
               <div class="item-desc indent"> Another intensive FCC course which covers manipulating data, and implementing more complicated user interfaces. It focuses less so on things like web pages, and templates, and more on web apps and components using SASS, D3 and React.js!</div>
             </div> -->
@@ -261,7 +260,7 @@ plaqueKey: v1-resume
           </div>
           <div class="item-date emphasis">Apr 2018</div>
           <div class="item-desc indent">
-            An introductory course to using ReactJS which was basic in nature, 
+            An introductory course to using ReactJS which was basic in nature,  
             but coupled with a few textbooks and an online bootcamp, solidified
             my understanding of the lightweight JavaScript framework.
           </div>
@@ -274,7 +273,7 @@ plaqueKey: v1-resume
           </div>
           <div class="item-date emphasis">Apr 2018</div>
           <div class="item-desc indent">
-            A well-rounded web developer course which I mainly used as a 
+            A well-rounded web developer course which I mainly used as a  
             resource for PHP, MySQL and phpMyAdmin usage tutorials. Using what I
             learned from this site I was able to configure the back-end for this
             very site while maintaining good PDO structure, and a secure
@@ -289,7 +288,7 @@ plaqueKey: v1-resume
           </div>
           <div class="item-date emphasis">Apr 2018</div>
           <div class="item-desc indent">
-            A promotional livestreamed React bootcamp that was held on YouTube 
+            A promotional livestreamed React bootcamp that was held on YouTube  
             walking viewers through a series of concepts, lectures and
             challenges having to do with React.js. It was taught by Tyler
             McGiniss, professional instructor and Google Developer Expert.
@@ -317,23 +316,23 @@ plaqueKey: v1-resume
         <ul class="item-list">
           <li>
             <b>Deployed reusable components in React.js</b>
-            through peer 
+            through peer  
             programming and test-driven development
           </li>
           <li>
             <b>Designed client-facing widgets</b>
-            for Virtual Agents to satisfy 
+            for Virtual Agents to satisfy  
             dynamic, natural language use cases
           </li>
           <li>
             <b>Received certified, formal training</b>
-            in DevOps, Agile 
+            in DevOps, Agile  
             Development and Design Thinking
           </li>
         </ul>
         <div class="item-desc">
           <span class="emphasis">Skills Improved:
-          </span>ES6 JavaScript, 
+          </span>ES6 JavaScript,  
           React.js, Node.js, DynamoDB, AWS Lambda
         </div>
       </div>
@@ -347,28 +346,28 @@ plaqueKey: v1-resume
         <ul class="item-list">
           <li>
             <b>Automated daily report process</b>
-            to provide up-to-date 
+            to provide up-to-date  
             spreadsheets/data for upper management
           </li>
           <li>
             <b>Revised legacy scripts</b>
-            to provide new functionality and more 
+            to provide new functionality and more  
             reliable data sources
           </li>
           <li>
             <b>Completed full system documentation</b>
-            for automation 
+            for automation  
             architecture in the form of docs and flowcharts
           </li>
           <li>
             <b>Troubleshot automation errors</b>
-            in legacy macros and daily 
+            in legacy macros and daily  
             reports, recording solutions for future reference
           </li>
         </ul>
         <div class="item-desc">
           <span class="emphasis">Skills Improved:
-          </span>MS Excel, VBA, MS 
+          </span>MS Excel, VBA, MS  
           Access, SQL, Command Line, SAP
         </div>
       </div>
@@ -382,28 +381,28 @@ plaqueKey: v1-resume
         <ul class="item-list">
           <li>
             <b>Created standard operating procedures</b>
-            for equipment 
+            for equipment  
             maintenance, and a detailed error log to reduce future downtime
           </li>
           <li>
             <b>Oversaw maintenance issues</b>
-            and operation times of the 
+            and operation times of the  
             production line equipment
           </li>
           <li>
             <b>Compiled weekly efficiency reports</b>
-            and statistical summaries 
+            and statistical summaries  
             of machine productivity
           </li>
           <li>
             <b>Presented findings and analytics</b>
-            to upper management to 
+            to upper management to  
             identify weak areas for economic improvement
           </li>
         </ul>
         <div class="item-desc">
           <span class="emphasis">Skills Improved:
-          </span>MS Excel, MS Access, MS 
+          </span>MS Excel, MS Access, MS  
           Visio, VBA, Presentation Skills
         </div>
       </div>
@@ -449,7 +448,7 @@ plaqueKey: v1-resume
         </div>
         <div class="item-desc">
           Over at
-          <a href="../projects" class="emphasis">Projects</a>, you can 
+          <a href="../projects" class="emphasis">Projects</a>, you can  
           see links to live demo projects, and the source code, however, if
           we're going to get meta, this whole site is another one of my side
           projects. I love hearing feedback, so feel free to tell me what you
@@ -478,15 +477,15 @@ plaqueKey: v1-resume
         <div class="item-date emphasis">Spring 2014</div>
         <ul class="item-list">
           <li>
-            Constructed a weather-resistant house for an impoverished family as 
+            Constructed a weather-resistant house for an impoverished family as  
             part of a student team
           </li>
           <li>
-            Mixed cement, laid bricks and painted the house as part of the 
+            Mixed cement, laid bricks and painted the house as part of the  
             outreach project
           </li>
           <li>
-            Fundraised the whole trip as a student project, dedicating the money 
+            Fundraised the whole trip as a student project, dedicating the money  
             to travel, and hiring local contractors
           </li>
         </ul>
@@ -498,19 +497,19 @@ plaqueKey: v1-resume
         <div class="item-date emphasis">Fall 2013</div>
         <ul class="item-list">
           <li>
-            Tasked with bathing and feeding those who were incapable of doing it 
+            Tasked with bathing and feeding those who were incapable of doing it  
             themselves
           </li>
           <li>
-            Comforted and supported the mentally ill through games, jokes, and 
+            Comforted and supported the mentally ill through games, jokes, and  
             stories
           </li>
           <li>
-            Swept, washed, and mopped the compounds daily to provide the 
+            Swept, washed, and mopped the compounds daily to provide the  
             residents with a clean environment
           </li>
           <li>
-            Reinforced my passion for charity work, while strengthening my 
+            Reinforced my passion for charity work, while strengthening my  
             communication skills on an international level
           </li>
         </ul>
@@ -534,7 +533,7 @@ plaqueKey: v1-resume
         </div>
         <div class="item-date emphasis">Sep 2016</div>
         <div class="item-desc">
-          An entrance scholarship of $2000.00 for incoming students with an 
+          An entrance scholarship of $2000.00 for incoming students with an  
           admission average greater than &gt;90%
         </div>
       </div>
@@ -546,7 +545,7 @@ plaqueKey: v1-resume
         </div>
         <div class="item-date emphasis">Sep 2018</div>
         <div class="item-desc">
-          A certification given for completing multiple professional training 
+          A certification given for completing multiple professional training  
           modules/sessions through a certified instructutor pertaining to
           modern, collaborative Agile development.
         </div>
@@ -559,7 +558,7 @@ plaqueKey: v1-resume
         </div>
         <div class="item-date emphasis">Apr 2018</div>
         <div class="item-desc">
-          Completed all 25 challenges in the skill umbrella to improve my 
+          Completed all 25 challenges in the skill umbrella to improve my  
           JavaScript capabilities.
         </div>
       </div>
@@ -586,14 +585,14 @@ plaqueKey: v1-resume
             href="https://atom.io"
             target="_blank"
             class="emphasis">Atom</a>
-          by GitHub, mainly because of the built-in Markdown previewing, Git 
+          by GitHub, mainly because of the built-in Markdown previewing, Git  
           integration, and extensive number of open-source packages (like SASS
           Compilers, and Auto-Prefixers).
         </li>
         <li>
           My favorite programming lanuage is
           <span class="emphasis">JavaScript</span>
-          for sure, even if it has a 
+          for sure, even if it has a  
           bunch of
           <a
             class="emphasis"
@@ -602,7 +601,7 @@ plaqueKey: v1-resume
         </li>
         <li>
           I'm a total
-          <span class="emphasis">podcast junkie</span>, I'm 
+          <span class="emphasis">podcast junkie</span>, I'm  
           subscribed to about 25 as of this moment.
         </li>
         <li>I am 100% a
